--- a/Work-Timer/App.xaml
+++ b/Work-Timer/App.xaml
@@ -3,5 +3,18 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:WorkTimer">
-
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.ThemeDictionaries>
+                <ResourceDictionary x:Key="Light" Source="ms-appx:///Theme/Light.xaml"/>
+                <ResourceDictionary x:Key="Dark" Source="ms-appx:///Theme/Dark.xaml"/>
+            </ResourceDictionary.ThemeDictionaries>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ms-appx:///Template/Button.xaml"/>
+                <ResourceDictionary Source="ms-appx:///Template/Text.xaml"/>
+                <ResourceDictionary Source="ms-appx:///Template/Single.xaml"/>
+                <ResourceDictionary Source="ms-appx:///Template/View.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
