--- a/Work-Timer/App.xaml
+++ b/Work-Timer/App.xaml
@@ -14,6 +14,7 @@
                 <ResourceDictionary Source="ms-appx:///Template/Text.xaml"/>
                 <ResourceDictionary Source="ms-appx:///Template/Single.xaml"/>
                 <ResourceDictionary Source="ms-appx:///Template/View.xaml"/>
+                <ResourceDictionary Source="ms-appx:///Template/Converter.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
