--- a/Work-Timer/Components/Layout/HistoryPanel.xaml
+++ b/Work-Timer/Components/Layout/HistoryPanel.xaml
@@ -1,15 +1,15 @@
 ﻿<UserControl
-    x:Class="WorkTimer.Components.Layout.FolderPanel"
+    x:Class="WorkTimer.Components.Layout.HistoryPanel"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:WorkTimer.Components.Layout"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:models="using:Lib.Share.Models" xmlns:interaction="using:Richasy.Controls.UWP.Interaction" xmlns:uwp="using:Richasy.Font.UWP"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:interaction="using:Richasy.Controls.UWP.Interaction" xmlns:uwp="using:Richasy.Font.UWP" xmlns:models="using:Lib.Share.Models"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
     <UserControl.Resources>
-        <DataTemplate x:DataType="models:FolderItem" x:Key="FolderItemTemplate">
+        <DataTemplate x:DataType="models:HistoryItem" x:Key="HisotyItemTemplate">
             <ListViewItem x:Name="Container">
                 <Grid Background="{ThemeResource CardBackground}" CornerRadius="5" Padding="15,10" Margin="0,5"
                       BorderBrush="{Binding ElementName=Container,Path=IsSelected,Converter={StaticResource SelectedColorConverter}}"
@@ -19,14 +19,16 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
-                    <Grid Width="45" Height="45" CornerRadius="5" Background="{ThemeResource PrimaryColorOpacity}">
-                        <uwp:FeatherIcon Symbol="{Binding Icon}" FontSize="16" Foreground="{ThemeResource PrimaryColorOver}"
+                    <Grid Width="45" Height="45" CornerRadius="5" Background="{ThemeResource SecondaryColorOpacity}">
+                        <uwp:FeatherIcon Symbol="Clock" FontSize="16" Foreground="{ThemeResource SecondaryColorOver}"
                                      VerticalAlignment="Center" HorizontalAlignment="Center"/>
                     </Grid>
                     <StackPanel Grid.Column="1" Margin="15,0,0,0">
                         <TextBlock Style="{StaticResource BodyTextStyle}" FontWeight="Bold" Foreground="{ThemeResource ImportantTextColor}"
+                               Text="{x:Bind GetReadTime()}"/>
+                        <TextBlock Style="{StaticResource SmallTextStyle}" Margin="0,5,0,0" Foreground="{ThemeResource TipTextColor}"
                                Text="{x:Bind Name}"/>
-                        <TextBlock Style="{StaticResource SmallTextStyle}" Text="{x:Bind CreateTime,Converter={StaticResource DateTimeConverter}}"
+                        <TextBlock Style="{StaticResource MiniTextStyle}" Text="{x:Bind CreateTime,Converter={StaticResource DateTimeConverter}}"
                                Margin="0,5,0,0"/>
                     </StackPanel>
                     <interaction:ActionButton Style="{StaticResource DefaultActionButtonStyle}" BorderThickness="0"
@@ -36,12 +38,6 @@
                         </interaction:ActionButton.Icon>
                         <interaction:ActionButton.Flyout>
                             <MenuFlyout MenuFlyoutPresenterStyle="{StaticResource BasicMenuFlyoutStyle}">
-                                <MenuFlyoutItem x:Uid="Control_ModifyTipBlock" Style="{StaticResource BasicMenuFlyoutItemStyle}"
-                                            Click="ModifyItem_Click" Tag="{Binding}">
-                                    <MenuFlyoutItem.Icon>
-                                        <uwp:FeatherIcon Symbol="PenTool" FontSize="15"/>
-                                    </MenuFlyoutItem.Icon>
-                                </MenuFlyoutItem>
                                 <MenuFlyoutItem x:Uid="Control_RemoveTipBlock" Style="{StaticResource BasicMenuFlyoutItemStyle}"
                                             Click="RemoveItem_Click" Tag="{Binding}">
                                     <MenuFlyoutItem.Icon>
@@ -61,24 +57,13 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-            <TextBlock Style="{StaticResource SubtitleTextStyle}" x:Uid="Control_FolderTipBlock"
-                       VerticalAlignment="Center" HorizontalAlignment="Left"/>
-            <interaction:IconButton VerticalAlignment="Center" Style="{StaticResource PrimaryExtraButtonStyle}"
-                                    Grid.Column="1" x:Uid="Control_AddFolderTipBlock"
-                                    x:Name="AddFolderButton" Click="AddFolderButton_Click">
-                <interaction:IconButton.Icon>
-                    <uwp:FeatherIcon Symbol="Plus" FontSize="12"/>
-                </interaction:IconButton.Icon>
-            </interaction:IconButton>
+            <TextBlock Style="{StaticResource SubtitleTextStyle}" x:Name="TitleBlock" VerticalAlignment="Center" HorizontalAlignment="Left"
+                       TextWrapping="Wrap"/>
         </Grid>
         <ListView Style="{StaticResource BasicListView}" Grid.Row="1"
                   ItemContainerStyle="{StaticResource TransparentListViewContainerStyle}"
-                  ItemsSource="{x:Bind vm.FolderCollection}" Margin="0,20,0,0"
-                  IsItemClickEnabled="True" ItemTemplate="{StaticResource FolderItemTemplate}"
-                  x:Name="FolderListView" ItemClick="FolderListView_ItemClick"/>
+                  ItemsSource="{x:Bind vm.DisplayHistoryCollection}" Margin="0,20,0,0"
+                  IsItemClickEnabled="True" ItemTemplate="{StaticResource HisotyItemTemplate}"
+                  x:Name="HistoryListView" ItemClick="HistoryListView_ItemClick"/>
     </Grid>
 </UserControl>
