--- a/Work-Timer/Template/Single.xaml
+++ b/Work-Timer/Template/Single.xaml
@@ -2,6 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:interaction="using:Richasy.Controls.UWP.Interaction"
+    xmlns:popup="using:Richasy.Controls.UWP.Popups"
     xmlns:local="using:WorkTimer.Template" xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls">
     <Style TargetType="interaction:ExtraTextBox" x:Key="TrasparentTextBoxStyle">
         <Setter Property="Background" Value="Transparent" />
@@ -81,6 +82,15 @@
         <Setter Property="FontSize" Value="14" />
         <Setter Property="Foreground" Value="{ThemeResource ImportantTextColor}" />
         <Setter Property="FontFamily" Value="{CustomResource Basic}" />
+    </Style>
+    <Style TargetType="popup:CenterPopup" x:Key="BasicCenterPopupStyle">
+        <Setter Property="PopupBackground" Value="{ThemeResource MaskBackground}" />
+        <Setter Property="PresenterBackground" Value="{ThemeResource CardBackground}" />
+        <Setter Property="PopupMaxWidth" Value="350" />
+        <Setter Property="CornerRadius" Value="5" />
+        <Setter Property="ShadowColor" Value="{ThemeResource ShadowColor}" />
+        <Setter Property="ShadowBlur" Value="16" />
+        <Setter Property="ShadowOpacity" Value="0.7" />
     </Style>
     <Style TargetType="ScrollBar" x:Key="BasicScrollBar">
         <Setter Property="MinWidth" Value="5" />
